# intelligent-evidence-platform

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CELERY_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_ARCHITECTURE_FIX.md  Dockerfile  INTERACTIVE_PLACEHOLDER_FIX.md  INTERACTIVE_PLACEHOLDER_INSERTION.md  MAC_VS_DOCKER_NLTK.md  NLTK_EXPLANATION.md  NLTK_OPTIMIZATION.md  PRD.md  README.md  STAFFS_API_DOC.md  TEMPLATE_EDITOR_REFACTOR_SUMMARY.md  TEMPLATE_MODULE_COMPREHENSIVE_FIX.md  THREE_MODE_ARCHITECTURE.md  WECOM_SYNC_GUIDE.md  alembic.ini  cc_demo.py  check_template_data.py  deploy.sh  docker-compose.yaml  docker-entrypoint.sh  exoport.json  fix_existing_templates.py  fix_templates_direct.py  hello.py  intelligent-evidence-platform.code-workspace  intelligent-evidence-platform.postman_collection.json  legal-docx-mgm.md  load_kb.py  models.erd  package-lock.json  pyproject.toml  reload_kb.py  response.json  start.sh  test_document_creation_api.py  (+6 more)
.agent/workflows/: openspec-archive.md  openspec-audit.md  openspec-proposal.md
.kiro/steering/: product.md  tech.md  (+1 more)
alembic/: env.py
app/: initial_data.py  main.py  ocr.py
frontend/: .dockerignore  Dockerfile  OPTIMIZATION_SUMMARY.md  next.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
openspec/: project.md
scripts/: cleanup_test_users.py  cleanup_test_users.sql  download_nltk_local.py  list_test_users.py  list_test_users_sql.py  start-celery-beat.sh  start-celery-worker.sh  sync_wecom_contacts.py  test_celery.py  test_celery_config.py  test_celery_system.py  test_smart_fill_generic.py  verify_smart_doc_gen.py  video_script_20260119_173408.md
static/: script.js  style.css
templates/: index.html
tests/: test_document_export.py  test_document_generation_schemas.py  test_document_generation_service.py  test_placeholder_replacement.py  verify_models.py
yixun-website/: final_nginx.conf  index.html  nginx.conf  package.json
(+776 files in other folders)
